feat: add school logo and initialize JS setup for future Supabase usage

--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
   <body>
     <!-- HERO / IMAGE -->
     <header class="hero">
-      <!-- PLACEHOLDER -->
-      <img src="" class="hero__image" />
+      <img src="./img/slo-Logo.png" class="hero__image" />
     </header>
 
     <!-- OPIS -->
@@ -129,5 +128,7 @@
         </div>
       </form>
     </section>
+
+    <script type="module" src="./js/script.js"></script>
   </body>
 </html>
