--- a/index.html
+++ b/index.html
@@ -99,33 +99,9 @@
           ></textarea>
         </div>
 
-        <button type="submit" class="btn-submit">Zapisz się</button>
-      </form>
-    </section>
-
-    <section class="placeholders">
-      <form class="placeholdersForm">
-        <div class="placeholdersFormGroup">
-          <label for="name">Imię i nazwisko</label>
-          <input
-            type="text"
-            id="name"
-            name="name"
-            placeholder="Jan Kowalski"
-            required
-          />
-          <div class="placeholdersFormGroupSearch">
-            <div>
-              <ol>
-                <li>Jan Kowalksi</li>
-                <li>Jan Kowalksi</li>
-                <li>Jan Kowalksi</li>
-                <li>Jan Kowalksi</li>
-                <li>Jan Kowalksi</li>
-              </ol>
-            </div>
-          </div>
-        </div>
+        <button id="btnGuest" type="submit" class="btn-submit">
+          Zapisz się
+        </button>
       </form>
     </section>
 
